# thumbnail

./: next.config.js  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  thumb_app.rs
src-tauri/src/models/: fs.rs  mod.rs
src-tauri/src/ops/: common_ops.rs  file_db.rs  file_ops.rs  mod.rs  thumb_ops.rs
src/app/: globals.css  layout.js  page.js  page.module.css
src/app/w2/: VideoPlayer.jsx  dragscroll.js  page.js  v.css  viewer.jsx
src/components/: App.css  App.jsx
src/components/DenseAppBar/: CustomSlider.jsx  DenseAppBar.css  DenseAppBar.jsx  DriveSelect.jsx  FavoriteMenu.jsx
src/components/DirList/: DirList.css  DirList.jsx
src/components/GridCell/: GridCell.css  GridCell.jsx
src/components/ThumbList/: ThumbList.css  ThumbList.jsx
src/pages/: 404.js
src/public/: img.html  index.html
src/public/src/: SplitView.js  img.js
src/utils/: AppConfig.jsx  MyContextMenu.jsx  TauriBridge.jsx  VirtualArray.jsx
tauri-plugin-tauri-plugin-context-menu/: Cargo.toml  README.md
tauri-plugin-tauri-plugin-context-menu/.changes/: config.json  initial-release.md  readme.md
tauri-plugin-tauri-plugin-context-menu/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-tauri-plugin-context-menu/examples/vanilla/src-tauri/src/: main.rs
tauri-plugin-tauri-plugin-context-menu/src/: lib.rs
