[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.1", features = [] }

[dependencies]
serde_json = "1.0.106"
serde = { version = "^1.0.188", features = ["derive"] }
tauri = { version = "^1.5.1", features = ["api-all", "devtools"] }
tauri-plugin-context-menu = "0.5.0"

tokio = { version = "^1.32.0", features = ["full"] }
tokio-util = "0.7.9"
mini-redis = "^0.4.0"
dirs = "^5.0.1"
rayon = "^1.7.0"

rav1e = { version = "^0.6.6", features = [] }
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
once_cell = "^1.18.0"
disk_list = "^0.2.10"
sha2 = "0.10.8"
async_zip = { version = "0.0.15", features = ["full"] }

base64 = "0.21.4"
image = { version = "^0.24.7", features = ["avif", "webp", "webp-encoder", "gif", "jpeg", "png"] }
webp-animation = "0.9.0"
imageproc = "0.23.0"
gif = "0.12.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
